--- a/Session12/Pages/ProductsListPage.xaml
+++ b/Session12/Pages/ProductsListPage.xaml
@@ -119,6 +119,7 @@
                                     <RowDefinition Height="*"/>
                                     <RowDefinition Height="*"/>
                                     <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
                                 </Grid.RowDefinitions>
 
                                 <Border
@@ -149,11 +150,13 @@
                                     Grid.Row="0">
                                     <TextBlock.Text>
                                         <MultiBinding
-                                            StringFormat="{}{0} за {1}">
+                                            StringFormat="{}{0} {1} {2}">
                                             <Binding
                                                 Path="Title"/>
                                             <Binding
-                                                Path="AdditionDateTime"/>
+                                                Path="Quantity"/>
+                                            <Binding
+                                                Path="MeasureUnit.Title"/>
                                         </MultiBinding>
                                     </TextBlock.Text>
                                 </TextBlock>
@@ -165,19 +168,36 @@
 
                                 <TextBlock
                                     Text="{Binding Path=AdditionDateTime}"
-                                    Grid.Row="3"
+                                    Grid.Row="2"
                                     Grid.Column="1"/>
 
                                 <TextBlock
-                                    Text="{Binding Path=Cost}"
-                                    Grid.Row="3"
+                                    Text="{Binding Path=Cost, StringFormat={}Стоимость: {0:f} рубл.}"
+                                    Grid.Row="2"
                                     Grid.Column="2"
                                     Margin="0 0 10 0"/>
 
-                                <TextBlock
-                                    Text="{Binding Path=MeasureUnit.Title}"
+                                <ListBox
+                                    Grid.Column="1"
+                                    Grid.ColumnSpan="2"
                                     Grid.Row="3"
-                                    Grid.Column="4"/>
+                                    ItemsSource="{Binding SupplierCountry}">
+                                    <ListBox.ItemsPanel>
+                                        <ItemsPanelTemplate>
+                                            <WrapPanel IsItemsHost="True"/>
+                                        </ItemsPanelTemplate>
+                                    </ListBox.ItemsPanel>
+                                    <ListBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <Border 
+                                                BorderBrush="{Binding Brush}"
+                                                BorderThickness="2"
+                                                Padding="3">
+                                                <TextBlock Text="{Binding Title}"/>
+                                            </Border>
+                                        </DataTemplate>
+                                    </ListBox.ItemTemplate>
+                                </ListBox>
                             </Grid>
                         </Border>
                     </DataTemplate>
