--- a/Session12/App.xaml
+++ b/Session12/App.xaml
@@ -68,8 +68,12 @@
                TargetType="TextBox">
             <Setter Property="Background"
                     Value="Transparent"/>
+            <Setter Property="Padding"
+                    Value="3"/>
             <Setter Property="BorderBrush"
-                    Value="Transparent"/>
+                    Value="Black"/>
+            <Setter Property="BorderThickness"
+                    Value="1"/>
         </Style>
         <!--#endregion-->
 
@@ -160,12 +164,14 @@
             </Setter>
         </Style>
         <!--#endregion-->
-
-        <Style x:Key="StyleProductList" TargetType="ListBoxItem">
+        
+        <!--#region Стиль для ListBox продуктов-->
+        <Style x:Key="ListBoxProducts" TargetType="ListBoxItem">
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="ListBoxItem">
-                        <Border BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}">
+                        <Border BorderBrush="{TemplateBinding BorderBrush}"
+                                Background="{TemplateBinding Background}">
                             <ContentPresenter/>
                         </Border>
                         <ControlTemplate.Triggers>
@@ -174,16 +180,27 @@
                                 Value="True">
                                 <Setter
                                     Property="Background"
-                                    Value="Aqua"/>
+                                    Value="#e5e5e5"/>
                                 <Setter
                                     Property="BorderBrush"
-                                    Value="#83CC16" />
+                                    Value="#e5e5e5" />
+                            </Trigger>
+                            <Trigger
+                                Property="IsSelected"
+                                Value="True">
+                                <Setter
+                                    Property="Background"
+                                    Value="#8d99ae"/>
+                                <Setter
+                                    Property="BorderBrush"
+                                    Value="#edf2f4" />
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
         </Style>
+        <!--#endregion-->
 
         <!--#region Стили Stackpanel в личном кабинете-->
         <Style TargetType="StackPanel" x:Key="PersenCabinetStackpanel">
